fix overlap

--- a/src/components/movie/components/video.css
+++ b/src/components/movie/components/video.css
@@ -1,4 +1,17 @@
-.media-content--name {
+
+.media-box {
+  margin: 10px;
+  position: relative;
+}
+
+.media-box__img-box {
+  position: relative;
+  text-align: center;
+  cursor: pointer;
+  z-index: 0;
+}
+
+.media-box__img-box--title {
   color: white;
   font-weight: 700;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -12,74 +25,28 @@
   margin: auto;
 }
 
-.media-content__box {
-  margin: 10px;
-}
-
-.media-content__box--img-box {
-  position: relative;
-  text-align: center;
-  cursor: pointer;
-}
-
-.media-content__box--img-box img {
-  border-radius: 5px;
-}
-
-.media-content__box--img {
+.media-box__img-box--ext {
   margin: auto;
-}
-
-.hv-popup {
-  position: absolute;
-}
-.hv-popup--box {
-  /* display: none; */
-  opacity: 0;
-  transition: opacity 0.3s ease-out; 
-  /* left: 50%; */
-}
-
-.hv-popup:hover .hv-popup--box {
-  display: block;
-  opacity: 1; 
-  z-index: 4;
-}
-
-.hv-list {
-  padding: 3px;
-}
-.hv-list--item {
-  color: aliceblue;
-  border: 1px solid rgb(229, 229, 239);
   border-radius: 5px;
-  padding: 2px;
-  margin-top: 3px;
-  background-color: #d2cee642;
-}
-
-.hv-list--item:hover  {
-  background-color: #551a8b;
-  height: 20px;
 }
 
 @media only screen and (min-width: 700px) {
-  .media-content__box--img {
+  .media-box__img-box--ext {
     height: 275px;
     width: 225px;
   }
-  .media-content--name {
+  .media-box__img-box--title {
     font-size: 10px;
     width: 200px;
   }
 }
 
 @media only screen and (max-width: 700px) {
-  .media-content__box--img {
+  .media-box__img-box--ext {
     height: 150px;
     width: 100px;
   }
-  .media-content--name {
+  .media-box__img-box--title {
     font-size: 5px;
     width: 100px;
   }
