--- a/src/components/movie/components/videoMainList.css
+++ b/src/components/movie/components/videoMainList.css
@@ -11,6 +11,7 @@
   justify-content: center;
   align-self: baseline;
   flex: 1;
+  padding-bottom: 50px;
 }
 
 @media only screen and (min-width: 700px) {
